# dumbster

./: README.md  pyproject.toml  runner.py
dumbster/: __main__.py  runner.py
examples/helper/: __init__.py  util.py
examples/tests/: conftest.py  test_foo.py
tests/: conftest.py  test_foo.py
