[project]
name = "dumbster"
version = "0.0.1"
description = "Hopeless test runner for optimistic idiots"
keywords = ["test runner", "trash bin", "joystick"]
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Kaloyan Ivanov", email = "kaloyan.ivanov88@gmail.com" }]

requires-python = ">= 3.11"

[project.scripts]
dumb = "dumbster.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dumbster"]

[build-system]
requires = ["setuptools>=75.1.0", "wheel"]
build-backend = "setuptools.build_meta"
